fix border curvature on safari

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,8 @@ html,body{
     min-height: 47px;
     max-width: 225px;
     max-height: 47px;
-    border-radius: 50px;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
     align-self: center;
     justify-self: center;
     column-gap: 10px;
